# async-project-management-api

./: .gitignore  DEV_NOTES.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pyrightconfig.json  token
app/: main.py
app/core/: auth.py  config.py  context.py  database.py  dependencies.py  security.py
app/middleware/: correlation.py  logging.py
app/models/: __init__.py  event.py  payment.py  payment_link.py  user.py
app/routes/: __init__.py  health.py  payment_links.py  user.py
app/schemas/: payment.py  payment_link.py  user.py
app/workers/: celery_app.py  tasks.py
migrations/: env.py
migrations/versions/: 481ba3181ab5_add_multi_session_columns.py  5cc44992c2b3_add_payment_tables_fixed.py  7ac37fcb4067_initial.py  9c85d3731e76_fix_created_at_timezone.py  c6d3bed17884_add_token_metadata_fields.py  cb371441a096_add_multi_session_columns.py
tests/: 1  conftest.py
tests/integration/: test_users.py
tests/unit/: test_auth.py
